[ADDED] Images of EJE-120 machine [MODIFIED] some views accordingly with the word files

--- a/views/aluguer.html
+++ b/views/aluguer.html
@@ -23,7 +23,7 @@
 				</ul>
 				<p/>
 				Consulte-nos:   +244 924 198 989 - carlos.santos@maqman.net
-				+244 946 919 205 - mendes.jorge@maqman.net
+				+244 941 143 732 - hugo.damasio@maqman.net
 			</div>
 			<div class='separator'></div>
 			<div id='right'>
