--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -27,7 +27,7 @@
 		</li>
 		<li class ='ltp' link='/maquina/MT-1440'>
 			<img class='machine' src='/img/machines/MT-1440.1740-small.png'/>
-			<span>MT 1440</span>
+			<span>MT 1440/1740</span>
 		</li>
 		<li class ='ltp' link='/maquina/160-ATJ'>
 			<img class='machine' src='/img/machines/160-ATJ-small.png'/>
