--- a/views/contactos.html
+++ b/views/contactos.html
@@ -21,12 +21,20 @@
 					<td>+244 939 149 559</td>
 				</tr>
 				<tr>
-					<th><strong>Assistência Ténica/ Tecnical Service:</strong></th>
+					<th><strong>Assistência Ténica/Tecnical Service:</strong></th>
 					<td>+244 939 170 844</td>
 				</tr>
 				<tr>
+					<th><strong>Balcão de Peças/Spare Parts:</strong></th>
+					<td>+244 922 080 593</td>
+				</tr>
+				<tr>
+					<th><strong>Apoio ao Cliente / Call Center:</strong></th>
+					<td>+244 922 080 591</td>
+				</tr>
+				<tr>
 					<th><strong>Email:</strong></th>				
-					<td>geral@maqman.net<br/>assistencia.tecnica@maqman.net</td>
+					<td>geral@maqman.net<br/>assistencia.tecnica@maqman.net<br/>apoioaocliente@maqman.net</td>
 				</tr>
 				 
 				
