--- a/views/pecas.html
+++ b/views/pecas.html
@@ -7,7 +7,18 @@
 			<div id='left'>
 				<h3>Português</h3>
 				<p>
-				A MAQMAN vende uma gama completa de máquinas, equipamentos e acessórios para movimentação de cargas e construção, recebendo frequentemente vários equipamentos dos diversos fabricantes e tendo alguns deles em stock.
+				A Maqman vende as peças para as suas máquinas.
+				<br/><br/>
+				O nosso balcão de peças, instalado ao lado da oficina, dispõe de atendimento personalizado efetuado por pessoal técnico qualificado.
+				<br/><br/>
+				Para sua comodidade, dispomos de pagamento eletrónico por Terminal TPA
+				<br/><br/>
+				Se pretender pode ligar para o contacto direto – 922 080 593
+				<br/><br/>
+				Ou então, na comodidade da sua secretária, pode enviar um email para pecas@maqman.net. Junte a informação mais detalhada possível.
+				<br/><br/>
+				Use a referência do fabricante que está gravada na peça ou indicada no respetivo catálogo.<br/>
+				Se não possuir a referência, não se esqueça de indicar o número de série do equipamento.
 				</p>
 			</div>
 			<div class='separator'></div>
