[ADDED] bell main page and one bell machine [ADDED] Images for Ammann machines

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -54,6 +54,9 @@
 			<li>
 				<img class ='ltb' src='/img/partners/sumitomo.png' link='http://www.sumitomokenki.com/'></img>
 			</li>
+			<li>
+				<img class ='ltb' src='/img/partners/bell.png' link='http://www.bellequipment.com/'></img>
+			</li>
 		</ul>
 
 	<script type="text/javascript">
