--- a/views/machine/770-G.html
+++ b/views/machine/770-G.html
@@ -11,25 +11,25 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.ammann-group.com/en/home/compaction/tandem-and-combination-roller/light-tandem-vibratory-roller/technical-details/articleproduct/720/'>ARX 26</span></h1>
-            <h2>Cilindro 2 rolos</h2>
+            <h1><span class='ltb' link='http://www.bellequipment.com/en/product/770g-772g#autolocation'>770 G/772 G</span></h1>
+            <h2>Cilindro Rolo e Pneu</h2>
             <p/>
             <table id='info'>
                 <caption>Informações Técnicas</caption>
                 <thead>
                     <tr>
-                        <th>Potência</th>
-                        <th>Peso exercido</th>
-                        <th>Combustível</th>
-                        <th>Rolo</th>
+                        <th>Motor</th>
+                        <th>Peso máximo em trabalho</th>
+                        <th>Pneus</th>
+                        <th>Opcional</th>
                     </tr>
                 </thead>
                 <tbody> 
                     <tr>
-                        <td>6.1 kW</td>
-                        <td>2460 kg</td>
-                        <td>Diesel</td>
-                        <td>1200 mm</td>
+                        <td>John Deere 165/194 hp</td>
+                        <td>21772 kg</td>
+                        <td>17,5 - 25</td>
+                        <td>6WD</td>
                     </tr>
                 </tbody>
             </table>
@@ -41,9 +41,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/ARX-26-1.jpg"/>
-				<img class="sp" src="/img/machines/ARX-26-2.jpg"/>
-				<img class="sp" src="/img/machines/ARX-26-3.jpg"/>
+				<img class="sp" src="/img/machines/770-G-1.jpg"/>
+				<img class="sp" src="/img/machines/770-G-2.jpg"/>
+				<img class="sp" src="/img/machines/770-G-3.jpg"/>
 			</div>
 		</div>
     </div>
