--- a/views/machine/ASC-120.html
+++ b/views/machine/ASC-120.html
@@ -39,11 +39,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/160-ATJ-1.jpg"/>
-				<img class="sp" src="/img/machines/160-ATJ-2.jpg"/>
-				<img class="sp" src="/img/machines/160-ATJ-3.jpg"/>
-                <img class="sp" src="/img/machines/160-ATJ-4.jpg"/>
-
+				<img class="sp" src="/img/machines/ASC-150-1.jpg"/>
+				<img class="sp" src="/img/machines/ASC-150-2.jpg"/>
+				<img class="sp" src="/img/machines/ASC-150-3.jpg"/>
 			</div>
 		</div>
     </div>
