[MODIFIED] BELL partner and machines terminated [MODIFIED] inserted the corrected images for ammann machines

--- a/views/brand/ammann.html
+++ b/views/brand/ammann.html
@@ -17,9 +17,9 @@
 	<p/>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='/maquina/ACR-70D'>
-			<img class='machine' src='/img/machines/ACR-70D-small.jpg'/>
-			<span>ACR 70D</span>
+		<li class ='ltp' link='/maquina/ARC-70D'>
+			<img class='machine' src='/img/machines/ARC-70D-small.jpg'/>
+			<span>ARC 70D</span>
 		</li>
 		<li class ='ltp' link='/maquina/APF-1240'>
 			<img class='machine' src='/img/machines/APF-1240-small.jpg'/>
