--- a/views/machine/315-SK-4WD.html
+++ b/views/machine/315-SK-4WD.html
@@ -11,23 +11,23 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.ammann-group.com/en/home/compaction/vibratory-plate/rev-vibratory-plate/technical-details/articleproduct/692/'>APR 3020</span></h1>
-            <h2>Placa Reversível</h2>
+        	<h1><span class='ltb' link='http://www.bellequipment.com/en/product/315SK#autolocation'>315 SK 4WD</span></h1>
+            <h2>Retroescavadora</h2>
             <p/>
             <table id='info'>
                 <caption>Informações Técnicas</caption>
                 <thead>
                     <tr>
-                        <th>Potência</th>
-                        <th>Peso exercido</th>
-                        <th>Combustível</th>
+                        <th>Motor</th>
+                        <th>Peso</th>
+                        <th>Pneus</th>
                     </tr>
                 </thead>
                 <tbody> 
                     <tr>
-                        <td>4.5 kW</td>
-                        <td>230 kg</td>
-                        <td>Diesel</td>
+                        <td>John Deere 94 hp</td>
+                        <td>7.829 kg</td>
+                        <td>12,5/80-18 (ft) 16,9-28 (tr)</td>
                     </tr>
                 </tbody>
             </table>
@@ -39,9 +39,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/APR-3020-1.jpg"/>
-				<img class="sp" src="/img/machines/APR-3020-2.jpg"/>
-				<img class="sp" src="/img/machines/APR-3020-3.jpg"/>
+				<img class="sp" src="/img/machines/315-SK-4WD-1.jpg"/>
+				<img class="sp" src="/img/machines/315-SK-4WD-2.jpg"/>
+				<img class="sp" src="/img/machines/315-SK-4WD-3.jpg"/>
             </div>
 		</div>
     </div>
