--- a/views/machine/770-G.html
+++ b/views/machine/770-G.html
@@ -12,7 +12,7 @@
 	<div id='intro'>
         <div id='left'>
             <h1><span class='ltb' link='http://www.bellequipment.com/en/product/770g-772g#autolocation'>770 G/772 G</span></h1>
-            <h2>Cilindro Rolo e Pneu</h2>
+            <h2>Motoniveladora</h2>
             <p/>
             <table id='info'>
                 <caption>Informações Técnicas</caption>
@@ -41,9 +41,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/770-G-1.jpg"/>
-				<img class="sp" src="/img/machines/770-G-2.jpg"/>
-				<img class="sp" src="/img/machines/770-G-3.jpg"/>
+				<img class="sp" src="/img/machines/770G-1.jpg"/>
+				<img class="sp" src="/img/machines/770G-2.jpg"/>
+				<img class="sp" src="/img/machines/770G-3.jpg"/>
 			</div>
 		</div>
     </div>
