--- a/views/machine/ARC-70D.html
+++ b/views/machine/ARC-70D.html
@@ -11,7 +11,7 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.ammann-group.com/en/home/compaction/rammers/technical-details/articleproduct/680/'>ACR 70D</span></h1>
+        	<h1><span class='ltb' link='http://www.ammann-group.com/en/home/compaction/rammers/technical-details/articleproduct/680/'>ARC 70D</span></h1>
         	<h2>Saltitão</h2>
         	<p/>
         	<table id='info'>
@@ -39,12 +39,10 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/160-ATJ-1.jpg"/>
-				<img class="sp" src="/img/machines/160-ATJ-2.jpg"/>
-				<img class="sp" src="/img/machines/160-ATJ-3.jpg"/>
-                <img class="sp" src="/img/machines/160-ATJ-4.jpg"/>
-
-			</div>
+				<img class="sp" src="/img/machines/ARC-70D-1.jpg"/>
+				<img class="sp" src="/img/machines/ARC-70D-2.jpg"/>
+				<img class="sp" src="/img/machines/ARC-70D-3.jpg"/>
+            </div>
 		</div>
     </div>
 
