--- a/views/machine/ARX-26.html
+++ b/views/machine/ARX-26.html
@@ -44,6 +44,7 @@
 				<img class="sp" src="/img/machines/ARX-26-1.jpg"/>
 				<img class="sp" src="/img/machines/ARX-26-2.jpg"/>
 				<img class="sp" src="/img/machines/ARX-26-3.jpg"/>
+                <img class="sp" src="/img/machines/ARX-26-4.jpg"/>
 			</div>
 		</div>
     </div>
