--- a/views/machine/ASC-120.html
+++ b/views/machine/ASC-120.html
@@ -42,6 +42,7 @@
 				<img class="sp" src="/img/machines/ASC-150-1.jpg"/>
 				<img class="sp" src="/img/machines/ASC-150-2.jpg"/>
 				<img class="sp" src="/img/machines/ASC-150-3.jpg"/>
+                <img class="sp" src="/img/machines/ASC-150-4.jpg"/>
 			</div>
 		</div>
     </div>
