--- a/views/machine/B30-E.html
+++ b/views/machine/B30-E.html
@@ -11,25 +11,23 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.ammann-group.com/en/home/compaction/walk-behind-roller/'>ARW 65</span></h1>
-            <h2>Cilindro Apeado</h2>
+        	<h1><span class='ltb' link='http://www.bellequipment.com/en/product/b30e#autolocation'>B30 E</span></h1>
+            <h2>Dumper articulado</h2>
             <p/>
             <table id='info'>
                 <caption>Informações Técnicas</caption>
                 <thead>
                     <tr>
-                        <th>Potência</th>
-                        <th>Peso exercido</th>
-                        <th>Combustível</th>
-                        <th>Rolo</th>
+                        <th>Motor</th>
+                        <th>Peso</th>
+                        <th>Capacidade de carga</th>
                     </tr>
                 </thead>
                 <tbody> 
                     <tr>
-                        <td>4.5 kW</td>
-                        <td>720 kg</td>
-                        <td>Diesel</td>
-                        <td>650 mm</td>
+                        <td>Mercedes Benz 322 hp</td>
+                        <td>19216 kg</td>
+                        <td>28000 kg</td>
                     </tr>
                 </tbody>
             </table>
@@ -41,9 +39,11 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/ARW-65-1.jpg"/>
-				<img class="sp" src="/img/machines/ARW-65-2.jpg"/>
-				<img class="sp" src="/img/machines/ARW-65-3.jpg"/>
+				<img class="sp" src="/img/machines/B30-E-1.jpg"/>
+				<img class="sp" src="/img/machines/B30-E-2.jpg"/>
+				<img class="sp" src="/img/machines/B30-E-3.jpg"/>
+                <img class="sp" src="/img/machines/B30-E-4.jpg"/>
+                <img class="sp" src="/img/machines/B30-E-5.jpg"/>
 			</div>
 		</div>
     </div>
