--- a/views/machine/B40-E.html
+++ b/views/machine/B40-E.html
@@ -11,25 +11,23 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.ammann-group.com/en/home/compaction/tandem-and-combination-roller/light-tandem-vibratory-roller/technical-details/articleproduct/720/'>ARX 26</span></h1>
-            <h2>Cilindro 2 rolos</h2>
+        	<h1><span class='ltb' link='http://www.bellequipment.com/en/product/b40d#autolocation'>B40 E</span></h1>
+            <h2>Dumper articulado</h2>
             <p/>
             <table id='info'>
                 <caption>Informações Técnicas</caption>
                 <thead>
                     <tr>
-                        <th>Potência</th>
-                        <th>Peso exercido</th>
-                        <th>Combustível</th>
-                        <th>Rolo</th>
+                        <th>Motor</th>
+                        <th>Peso</th>
+                        <th>Capacidade de carga</th>
                     </tr>
                 </thead>
                 <tbody> 
                     <tr>
-                        <td>6.1 kW</td>
-                        <td>2460 kg</td>
-                        <td>Diesel</td>
-                        <td>1200 mm</td>
+                        <td>Mercedes Benz 449 hp</td>
+                        <td>29850 kg</td>
+                        <td>37000 kg</td>
                     </tr>
                 </tbody>
             </table>
@@ -41,9 +39,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/ARX-26-1.jpg"/>
-				<img class="sp" src="/img/machines/ARX-26-2.jpg"/>
-				<img class="sp" src="/img/machines/ARX-26-3.jpg"/>
+				<img class="sp" src="/img/machines/B40-E-1.jpg"/>
+				<img class="sp" src="/img/machines/B40-E-2.jpg"/>
+				<img class="sp" src="/img/machines/B40-E-3.jpg"/>
 			</div>
 		</div>
     </div>
