[MODIFIED] added a new contact and changed company's location

--- a/views/contactos.html
+++ b/views/contactos.html
@@ -34,7 +34,7 @@
 				</tr>
 				<tr>
 					<th><strong>Email:</strong></th>				
-					<td>geral@maqman.net<br/>assistencia.tecnica@maqman.net<br/>apoioaocliente@maqman.net</td>
+					<td>geral@maqman.net<br/>assistencia.tecnica@maqman.net<br/>pecas@maqman.net<br/>apoioaocliente@maqman.net</td>
 				</tr>
 				 
 				
