[MODIFIED] images extensions

--- a/views/brand/Jungheinrich.html
+++ b/views/brand/Jungheinrich.html
@@ -18,11 +18,11 @@
 
 	<ul id='slideMaq'>
 		<li class ='ltp' link='/maquina/EFG-215'>
-			<img class='machine' src='/img/machines/EFG-215-small.gif'/>
+			<img class='machine' src='/img/machines/EFG-215-small.png'/>
 			<span>EFG 215/220</span>
 		</li>
 		<li class ='ltp' link='/maquina/ETV-216'>
-			<img class='machine' src='/img/machines/ETV-216-small.jpg'/>
+			<img class='machine' src='/img/machines/ETV-216-small.png'/>
 			<span>ETV 216</span>
 		</li>
 		<li class ='ltp' link='/maquina/EJE-120'>
