--- a/views/brand/ammann.html
+++ b/views/brand/ammann.html
@@ -18,27 +18,27 @@
 
 	<ul id='slideMaq'>
 		<li class ='ltp' link='/maquina/ARC-70D'>
-			<img class='machine' src='/img/machines/ARC-70D-small.jpg'/>
+			<img class='machine' src='/img/machines/ARC-70D-small.png'/>
 			<span>ARC 70D</span>
 		</li>
 		<li class ='ltp' link='/maquina/APF-1240'>
-			<img class='machine' src='/img/machines/APF-1240-small.jpg'/>
+			<img class='machine' src='/img/machines/APF-1240-small.png'/>
 			<span>APF 1240</span>
 		</li>
 		<li class ='ltp' link='/maquina/APR-3020'>
-			<img class='machine' src='/img/machines/APR-3020-small.jpg'/>
+			<img class='machine' src='/img/machines/APR-3020-small.png'/>
 			<span>APR 3020</span>
 		</li>
 		<li class ='ltp' link='/maquina/ARW-65'>
-			<img class='machine' src='/img/machines/ARW-65-small.jpg'/>
+			<img class='machine' src='/img/machines/ARW-65-small.png'/>
 			<span>ARW 65</span>
 		</li>
 		<li class ='ltp' link='/maquina/ARX-26'>
-			<img class='machine' src='/img/machines/ARX-26-small.jpg'/>
+			<img class='machine' src='/img/machines/ARX-26-small.png'/>
 			<span>ARX 26</span>
 		</li>
 		<li class ='ltp' link='/maquina/ASC-120'>
-			<img class='machine' src='/img/machines/ASC-120-small.jpg'/>
+			<img class='machine' src='/img/machines/ASC-120-small.png'/>
 			<span>ASC 120/150</span>
 		</li>
 	</ul>
