--- a/views/brand/bell.html
+++ b/views/brand/bell.html
@@ -18,7 +18,7 @@
 
 	<ul id='slideMaq'>
 		<li class ='ltp' link='/maquina/315-SK-4WD'>
-			<img class='machine' src='/img/machines/315-SK-4WD-small.jpg'/>
+			<img class='machine' src='/img/machines/315-SK-4WD-small.png'/>
 			<span>315-SK-4WD</span>
 		</li>
 		<li class ='ltp' link='/maquina/B30-E'>
