[ADDED] 150-AETJ manitou machine [MODIFIED] Corrected names, added images and changed password field type to password

--- a/views/brand/manitou.html
+++ b/views/brand/manitou.html
@@ -33,6 +33,10 @@
 			<img class='machine' src='/img/machines/160-ATJ-small.png'/>
 			<span>160 ATJ</span>
 		</li>
+		<li class ='ltp' link='/maquina/150-AETJ'>
+			<img class='machine' src='/img/machines/150-AETJ-small.png'/>
+			<span>150 AETJ</span>
+		</li>
 		<li class ='ltp' link='/maquina/120-SE'>
 			<img class='machine' src='/img/machines/120-SE-small.png'/>
 			<span>120 SE</span>
