--- a/views/machine/120-SE.html
+++ b/views/machine/120-SE.html
@@ -6,7 +6,7 @@
     @{head('<meta http-equiv="X-UA-Compatible" content="IE=10" />')}
     @{head('<meta name="format-detection" content="telephone=no"/>')}
     @{head('<link rel="stylesheet" href="/css/maquinas.css"/>')}
-    <!-- @{head('<script src="/js/slider.js"></script>')} -->
+    @{head('<script src="/js/slider.js"></script>')}
 </head>
 <body>
 	<div id='intro'>
@@ -20,7 +20,7 @@
         			<tr>
         				<th>Capacidade de Carga</th>
         				<th>Elevação</th>
-        				<th>Combustível</th>
+        				<th>Motorização</th>
         			</tr>
         		</thead>
         		<tbody>	
@@ -36,6 +36,8 @@
         	<div id="slider">
         		<div id="toShow">
         			<img class='sp' src="/img/machines/120-SE-1.jpg"/>
+                    <img class='sp' src="/img/machines/120-SE-2.jpg"/>
+                    <img class='sp' src="/img/machines/120-SE-3.jpg"/>
         		</div>
 		</div>
     </div>
