--- a/views/machine/150-AETJ.html
+++ b/views/machine/150-AETJ.html
@@ -11,38 +11,33 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1>MT-1440/1740</h1>
-        	<h2>Empilhador Telescópico</h2>
+        	<h1><span class='ltb' link='http://www.pt.manitou.com/manitou/pt/market/1-construction/product/124-150-aetj-c'>150 AETJ</span></h1>
+        	<h2>Plataforma Elevatória</h2>
         	<p/>
         	<table id='info'>
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Capacidade de Elevação</th>
-        				<th>Altura de Elevação</th>
+        				<th>Capacidade de Carga</th>
+        				<th>Elevação</th>
         				<th>Motorização</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-        				<td>4.000 kg</td>
-        				<td>14/17 m</td>
-        				<td>Diesel</td>
+        				<td>230 kg</td>
+        				<td>15 m</td>
+        				<td>Elétrico</td>
         			</tr>
         		</tbody>
         	</table>
         </div>
         <div id ='right'>
         	<div id="slider">
-			<div id="nav">
-				<button id="previous">Previous</button>
-				<button id="next">Next</button>
-			</div>
-			<div id="toShow">
-				<img class="sp" src="/img/machines/MT-1440-1.jpg"/>
-				<img class="sp" src="/img/machines/MT-1440-2.jpg"/>
-				<img class="sp" src="/img/machines/MT-1440-3.jpg"/>
-			</div>
+        		<div id="toShow">
+        			<img class='sp' src="/img/machines/150-AETJ-1.png"/>
+                    <img class='sp' src="/img/machines/150-AETJ-2.jpg"/>
+        		</div>
 		</div>
     </div>
 
