--- a/views/machine/160-ATJ.html
+++ b/views/machine/160-ATJ.html
@@ -20,12 +20,12 @@
         			<tr>
         				<th>Capacidade de Carga</th>
         				<th>Elevação</th>
-        				<th>Combustível</th>
+        				<th>Motorização</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-        				<td>130 kg</td>
+        				<td>230 kg</td>
         				<td>16 m</td>
         				<td>Diesel</td>
         			</tr>
