--- a/views/machine/MI-25.html
+++ b/views/machine/MI-25.html
@@ -20,13 +20,13 @@
         			<tr>
         				<th>Capacidade de Elevação</th>
         				<th>Altura de Elevação</th>
-        				<th>Combustível</th>
+        				<th>Motorização</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
         				<td>2.500/3.000/3.500 Kg</td>
-        				<td>3.30 m</td>
+        				<td>4.70 m</td>
         				<td>Diesel</td>
         			</tr>
         		</tbody>
