--- a/views/machine/MT-1235.html
+++ b/views/machine/MT-1235.html
@@ -20,7 +20,7 @@
         			<tr>
         				<th>Capacidade de Elevação</th>
         				<th>Altura de Elevação</th>
-        				<th>Combustível</th>
+        				<th>Motorização</th>
         			</tr>
         		</thead>
         		<tbody>	
