--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,7 @@
 			<br />
 			<div>
 				<div>Login password:</div>
-				<div><input type="text" name="LoginPassword" value="" maxlength="30" /></div>
+				<div><input type="password" name="LoginPassword" value="" maxlength="30" /></div>
 			</div>
 			<input type='submit' name = 'Submit'/>
 		</form>
