[MODIFIED] corrected names and spaces on contactos.html

--- a/views/contactos.html
+++ b/views/contactos.html
@@ -21,7 +21,7 @@
 					<td>+244 939 149 559</td>
 				</tr>
 				<tr>
-					<th><strong>Assistência Ténica/Tecnical Service:</strong></th>
+					<th><strong>Assistência Técnica/Tecnical Service:</strong></th>
 					<td>+244 939 170 844</td>
 				</tr>
 				<tr>
@@ -29,7 +29,7 @@
 					<td>+244 922 080 593</td>
 				</tr>
 				<tr>
-					<th><strong>Apoio ao Cliente / Call Center:</strong></th>
+					<th><strong>Apoio ao Cliente/Call Center:</strong></th>
 					<td>+244 922 080 591</td>
 				</tr>
 				<tr>
@@ -37,8 +37,6 @@
 					<td>geral@maqman.net<br/>assistencia.tecnica@maqman.net<br/>pecas@maqman.net<br/>apoioaocliente@maqman.net</td>
 				</tr>
 				 
-				
-				</tr>
 				</tbody>
 			</table>
 
