--- a/views/machine/670-G.html
+++ b/views/machine/670-G.html
@@ -11,7 +11,7 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-            <h1><span class='ltb' link='http://www.bellequipment.com/en/product/770g-772g#autolocation'>770 G/772 G</span></h1>
+            <h1><span class='ltb' link='http://www.bellequipment.com/en/product/670g-672g#autolocation'>670 G/672 G</span></h1>
             <h2>Motoniveladora</h2>
             <p/>
             <table id='info'>
@@ -26,10 +26,10 @@
                 </thead>
                 <tbody> 
                     <tr>
-                        <td>John Deere 165/194 hp</td>
-                        <td>21772 kg</td>
-                        <td>17,5 - 25</td>
-                        <td>6WD</td>
+                        <td>John Deere 185 hp</td>
+                        <td>21.228 kg</td>
+                        <td>17,5-25 – 12 PR</td>
+                        <td>672 G com 6WD</td>
                     </tr>
                 </tbody>
             </table>
@@ -41,9 +41,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/770G-1.jpg"/>
-				<img class="sp" src="/img/machines/770G-2.jpg"/>
-				<img class="sp" src="/img/machines/770G-3.jpg"/>
+				<img class="sp" src="/img/machines/670G-1.jpg"/>
+				<img class="sp" src="/img/machines/670G-2.jpg"/>
+				<img class="sp" src="/img/machines/670G-3.jpg"/>
 			</div>
 		</div>
     </div>
