--- a/views/machine/SH210-5.html
+++ b/views/machine/SH210-5.html
@@ -12,22 +12,22 @@
 	<div id='intro'>
         <div id='left'>
         	<h1><span class='ltb' link='http://www.sumitomokenki.com/excavator/sh210-5.html'>SH210-5</span></h1>
-        	<h2>Escavadora</h2>
+        	<h2>Escavadora giratória</h2>
         	<p/>
         	<table id='info'>
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Capacidade de Elevação</th>
-        				<th>Altura de Elevação</th>
-        				<th>Combustível</th>
+        				<th>Motor</th>
+        				<th>Profundidade escavação</th>
+        				<th>Peso</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-        				<td>2.500/3.000/3.500 Kg</td>
-        				<td>3.30 m</td>
-        				<td>Diesel</td>
+        				<td>Isuzu 159 hp</td>
+        				<td>6.110 m</td>
+        				<td>20t</td>
         			</tr>
         		</tbody>
         	</table>
@@ -39,11 +39,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/MI-25.30.35-1.jpg"/>
-				<img class="sp" src="/img/machines/MI-25.30.35-2.jpg"/>
-				<img class="sp" src="/img/machines/MI-25.30.35-3.jpg"/>
-                <img class="sp" src="/img/machines/MI-25.30.35-4.jpg"/>
-                <img class="sp" src="/img/machines/MI-25.30.35-5.jpg"/>
+				<img class="sp" src="/img/machines/SH210-5-1.jpg"/>
+				<img class="sp" src="/img/machines/SH210-5-2.jpg"/>
+				<img class="sp" src="/img/machines/SH210-5-3.jpg"/>
 			</div>
 		</div>
     </div>
