--- a/views/machine/Sh350HD-5.html
+++ b/views/machine/Sh350HD-5.html
@@ -18,16 +18,16 @@
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-        				<th>Capacidade de Elevação</th>
-        				<th>Altura de Elevação</th>
-        				<th>Combustível</th>
+                        <th>Motor</th>
+                        <th>Profundidade escavação</th>
+                        <th>Peso</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
-        				<td>2.500/3.000/3.500 Kg</td>
-        				<td>3.30 m</td>
-        				<td>Diesel</td>
+        				<td>Isuzu 274 hp</td>
+        				<td>7.340 m</td>
+        				<td>35t</td>
         			</tr>
         		</tbody>
         	</table>
@@ -39,11 +39,9 @@
 				<button id="next">Next</button>
 			</div>
 			<div id="toShow">
-				<img class="sp" src="/img/machines/MI-25.30.35-1.jpg"/>
-				<img class="sp" src="/img/machines/MI-25.30.35-2.jpg"/>
-				<img class="sp" src="/img/machines/MI-25.30.35-3.jpg"/>
-                <img class="sp" src="/img/machines/MI-25.30.35-4.jpg"/>
-                <img class="sp" src="/img/machines/MI-25.30.35-5.jpg"/>
+				<img class="sp" src="/img/machines/SH350HD-5-1.jpg"/>
+				<img class="sp" src="/img/machines/SH350HD-5-2.jpg"/>
+				<img class="sp" src="/img/machines/SH350HD-5-3.jpg"/>
 			</div>
 		</div>
     </div>
