[ADDED] two brands, kalmar and compair and kalmar machines

--- a/views/machine/C-125.html
+++ b/views/machine/C-125.html
@@ -12,20 +12,22 @@
 	<div id='intro'>
         <div id='left'>
         	<h1><span class='ltb' link='http://www.compair.pt/Compressor_Selector.asp?model=C125%20(New%20DLT1303%20Electronic%20Controller)&air=12%2E5&motor=97&Pressure=7+para+8&Speed=n%2Fa&section=detail&id=494&Pressureunits=Bar%20g&MinPressure=5&Flowunits=m3/min'>C125</span></h1>
-        	<h2>Compressor</h2>
+        	<h2>Compressor portátil de parafuso</h2>
         	<p/>
         	<table id='info'>
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-                        <th>Fornecimento livre de ar</th>
-                        <th>Pressão</th>
+                        <th>Caudal de ar fornecido</th>
+                        <th>Pressão Máxima</th>
+                        <th>Potência do motor</th>
                     </tr>
                 </thead>
                 <tbody> 
                     <tr>
                         <td>12,5 m&sup3/min</td>
                         <td>8 Bar</td>
+                        <td>132 Hp</td>
                     </tr>
         		</tbody>
         	</table>
