--- a/views/machine/C-50.html
+++ b/views/machine/C-50.html
@@ -12,20 +12,22 @@
 	<div id='intro'>
         <div id='left'>
         	<h1><span class='ltb' link='http://www.compair.pt/Compressor_Selector.asp?model=C50%20(G%20-%20Generator%20Optional)%20(DLT0408)&air=5&motor=35%2E5&Pressure=7+para+8&Speed=n%2Fa&section=detail&id=1718&Pressureunits=Bar%20g&MinPressure=5&Flowunits=m3/min'>C50</span></h1>
-        	<h2>Compressor</h2>
+        	<h2>Compressor portátil de parafuso</h2>
         	<p/>
         	<table id='info'>
         		<caption>Informações Técnicas</caption>
         		<thead>
         			<tr>
-                        <th>Fornecimento livre de ar</th>
-        				<th>Pressão</th>
+                        <th>Caudal de ar fornecido</th>
+                        <th>Pressão Máxima</th>
+                        <th>Potência do motor</th>
         			</tr>
         		</thead>
         		<tbody>	
         			<tr>
                         <td>5 m&sup3/min</td>
         				<td>8 Bar</td>
+                        <td>48 Hp</td>
         			</tr>
         		</tbody>
         	</table>
@@ -39,6 +41,7 @@
 			<div id="toShow">
 				<img class="sp" src="/img/machines/C-50-1.jpg"/>
 				<img class="sp" src="/img/machines/C-50-2.jpg"/>
+                <img class="sp" src="/img/machines/C-50-3.jpg"/>
 			</div>
 		</div>
     </div>
