--- a/views/_layout.html
+++ b/views/_layout.html
@@ -34,7 +34,7 @@
 				<img class ='ltb' src='/img/partners/jungheinrich.png' link='http://www.jungheinrich.com/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/kalmar.png' link='http://www.cargotec.com/'></img>
+				<img class ='ltb' src='/img/partners/kalmar.png' link='http://www.kalmarglobal.com/'></img>
 			</li>
 			<li>
 				<img class ='ltb' src='/img/partners/compair.png' link='http://www.compair.pt/'></img>
@@ -95,6 +95,8 @@
 				   		<li><a href='/marca/galtrailer'><span>Galtrailer</span></a></li>
 				   		<li><a href='/marca/sumitomo'><span>Sumitomo</span></a></li>
 				   		<li><a href='/marca/bell'><span>Bell</span></a></li>
+				   		<li><a href='/marca/compair'><span>Bell</span></a></li>
+				   		<li><a href='/marca/kalmar'><span>Bell</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='/aluguer'><span>Aluguer</span></a></li>
