[ADDED] fassi.html and it machines [MODIFIED] images that were missing

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -95,8 +95,8 @@
 				   		<li><a href='/marca/galtrailer'><span>Galtrailer</span></a></li>
 				   		<li><a href='/marca/sumitomo'><span>Sumitomo</span></a></li>
 				   		<li><a href='/marca/bell'><span>Bell</span></a></li>
-				   		<li><a href='/marca/compair'><span>Bell</span></a></li>
-				   		<li><a href='/marca/kalmar'><span>Bell</span></a></li>
+				   		<li><a href='/marca/compair'><span>Compair</span></a></li>
+				   		<li><a href='/marca/kalmar'><span>Kalmar</span></a></li>
 				   	</ul>
 				   </li>
 				   <li><a href='/aluguer'><span>Aluguer</span></a></li>
