--- a/views/brand/fassi.html
+++ b/views/brand/fassi.html
@@ -11,27 +11,23 @@
 <body>
 
 	<div>
-		<img class ='ltb' src='/img/partners/bell.png' link='http://www.bellequipment.com'></img>
+		<img class ='ltb' src='/img/partners/fassi.png' link='http://www.fassi.com/'></img>
 		<span> - Outros modelos disponiveis</span>
 	<div>
 	<p/>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='/maquina/315-SK-4WD'>
-			<img class='machine' src='/img/machines/315-SK-4WD-small.png'/>
-			<span>315-SK-4WD</span>
+		<li class ='ltp' link='/maquina/FA-80'>
+			<img class='machine' src='/img/machines/FA-80-small.jpg'/>
+			<span>FA 80</span>
 		</li>
-		<li class ='ltp' link='/maquina/B30-E'>
-			<img class='machine' src='/img/machines/B30-E-small.jpg'/>
-			<span>B30 E</span>
+		<li class ='ltp' link='/maquina/F-215'>
+			<img class='machine' src='/img/machines/F-215-small.png'/>
+			<span>F 215</span>
 		</li>
-		<li class ='ltp' link='/maquina/B40-E'>
-			<img class='machine' src='/img/machines/B40-E-small.jpg'/>
-			<span>B40 E</span>
-		</li>
-		<li class ='ltp' link='/maquina/670-G'>
-			<img class='machine' src='/img/machines/670G-small.jpg'/>
-			<span>670 G/672 G</span>
+		<li class ='ltp' link='/maquina/F-385'>
+			<img class='machine' src='/img/machines/F-385-small.png'/>
+			<span>F 385</span>
 		</li>
 	</ul>
 	<script type="text/javascript">
