--- a/views/newsForm.html
+++ b/views/newsForm.html
@@ -8,13 +8,19 @@
 				<textarea col='40' rows='10' id='newsText' name='text' maxlength="1000" autofocus></textarea>
 				<br/>
 				<input type="radio" class="newsFormRadio" name="banner" id="ex1" value="img/news/banner1" checked />
-    			<label for="banner1" class="label">Geral</label>
+    			<label for="banner1" class="label">Maquinas Novas</label>
     			<br/>
     			<input type="radio" class="newsFormRadio" name="banner" id="ex2" value="img/news/banner2"/>
-    			<label for="banner2" class="label">Novidades</label>
+    			<label for="banner2" class="label">Apoio ao cliente</label>
     			<br/>
     			<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner3"/>
     			<label for="banner3" class="label">Conferencias</label>
+				<br/>
+				<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner4"/>
+    			<label for="banner3" class="label">Peças</label>
+				<br/>
+				<input type="radio" class="newsFormRadio" name="banner" id="ex3" value="img/news/banner5"/>
+    			<label for="banner3" class="label">Ligações</label>
 				<br/>
 				<input type ='submit' id='submit'/>
 				<button type='button' id='preview'>Prever</button>
