--- a/views/vendas.html
+++ b/views/vendas.html
@@ -18,5 +18,18 @@
 				</p>
 			</div>
 		</div>
+		<div id='brands'>
+			<img class ='ltp' src='/img/partners/compair.png' link='/marca/compair'></img>
+			<img class ='ltp' src='/img/partners/fassi.png' link='/marca/fassi'></img>
+			<img class ='ltp' src='/img/partners/manitou.png' link='/marca/manitou'></img>
+			<img class ='ltp' src='/img/partners/kalmar.png' link='/marca/kalmar'></img>
+			<img class ='ltp' src='/img/partners/jungheinrich.png' link='/marca/jungheinrich'></img>
+			<img class ='ltp' src='/img/partners/silla.png' link='/marca/silla'></img>
+			<img class ='ltp' src='/img/partners/ammann.png' link='/marca/ammann'></img>
+			<img class ='ltp' src='/img/partners/mustang.png' link='/marca/mustang'></img>
+			<img class ='ltp' src='/img/partners/galtrailer.png' link='/marca/galtrailer'></img>
+			<img class ='ltp' src='/img/partners/sumitomo.png' link='/marca/sumitomo'></img>
+			<img class ='ltp' src='/img/partners/bell.png' link='/marca/bell'></img>
+		</div>
 	</body>    
 </html>
