--- a/views/_layout.html
+++ b/views/_layout.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="/css/lib/flexisel.css"/>
 	<link rel="stylesheet" href="/css/lib/flexiselModified.css"/>
 	<script type='text/javascript'src="/js/lib/jquery.flexisel.js"></script>
+    
     @{head}
 
 </head>
@@ -74,7 +75,9 @@
 			$('.ltb').click(imgGoToBlank);
 		});
 	</script>
-
+		@{if controller.user}
+			<a id="logout" href="/logout"><span>Logout</span></a>			
+		@{endif}
 		<nav>
 			<a href='/'>
 			<img id='comp' src="/img/partners/maqman.png"></img>
