--- a/views/brand/bell.html
+++ b/views/brand/bell.html
@@ -22,15 +22,15 @@
 			<span>315-SK-4WD</span>
 		</li>
 		<li class ='ltp' link='/maquina/B30-E'>
-			<img class='machine' src='/img/machines/B30-E-small.jpg'/>
+			<img class='machine' src='/img/machines/B30-E-small.png'/>
 			<span>B30 E</span>
 		</li>
 		<li class ='ltp' link='/maquina/B40-E'>
-			<img class='machine' src='/img/machines/B40-E-small.jpg'/>
+			<img class='machine' src='/img/machines/B40-E-small.png'/>
 			<span>B40 E</span>
 		</li>
 		<li class ='ltp' link='/maquina/670-G'>
-			<img class='machine' src='/img/machines/670G-small.jpg'/>
+			<img class='machine' src='/img/machines/670G-small.png'/>
 			<span>670 G/672 G</span>
 		</li>
 	</ul>
