[MODIFIED] all text font family except for menu changed to Trebuchet [MODIFIED] views corrected as the client requested

--- a/views/assistencia.html
+++ b/views/assistencia.html
@@ -21,7 +21,7 @@
 				<p>
 				We are a team of specialized technicals.<br>
 				We move our workshop to your machine.<br>
-				We (garantimos) the best attention over your machine's health.<br> We give you a bigger working time to use more and better your machine.
+				We garantee the best attention over your machine's health.<br> We give you a bigger working time to use more and better your machine.
 				</p>
 			</div>
 		</div>
