--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,7 +17,7 @@ div.text div#left, div.text div#right{
 }
 .text{
 	display: -webkit-inline-box;
-	font-family: tahoma;
+	font-family: trebuchet ms;
 	font-size: small;
 }
 
