[ADDED] machine images that were missing [MODIFIED] corrections on broken links

--- a/views/brand/fassi.html
+++ b/views/brand/fassi.html
@@ -18,7 +18,7 @@
 
 	<ul id='slideMaq'>
 		<li class ='ltp' link='/maquina/FA-80'>
-			<img class='machine' src='/img/machines/FA-80-small.jpg'/>
+			<img class='machine' src='/img/machines/FA-80-small.png'/>
 			<span>FA 80</span>
 		</li>
 		<li class ='ltp' link='/maquina/F-215'>
