--- a/views/vendas.html
+++ b/views/vendas.html
@@ -24,7 +24,7 @@
 			<img class ='ltp' src='/img/partners/manitou.png' link='/marca/manitou'></img>
 			<img class ='ltp' src='/img/partners/kalmar.png' link='/marca/kalmar'></img>
 			<img class ='ltp' src='/img/partners/jungheinrich.png' link='/marca/jungheinrich'></img>
-			<img class ='ltp' src='/img/partners/silla.png' link='/marca/silla'></img>
+			<img class ='ltp' src='/img/partners/silla.png' link='/marca/sillaitaly'></img>
 			<img class ='ltp' src='/img/partners/ammann.png' link='/marca/ammann'></img>
 			<img class ='ltp' src='/img/partners/mustang.png' link='/marca/mustang'></img>
 			<img class ='ltp' src='/img/partners/galtrailer.png' link='/marca/galtrailer'></img>
