[MODIFIED] changes for filename change and added next and previous buttons that were missing

--- a/views/_layout.html
+++ b/views/_layout.html
@@ -47,7 +47,7 @@
 				<img class ='ltb' src='/img/partners/galtrailer.png' link='http://www.galtrailer.pt/'></img>
 			</li>
 			<li>
-				<img class ='ltb' src='/img/partners/silla.png' link='http://www.sillaitaly.com/'></img>
+				<img class ='ltb' src='/img/partners/sillaitaly.png' link='http://www.sillaitaly.com/'></img>
 			</li>
 			<li>
 				<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/'></img>
