--- a/views/machine/F-385.html
+++ b/views/machine/F-385.html
@@ -36,10 +36,13 @@
         </div>
         <div id ='right'>
         	<div id="slider">
+                <div id="nav">
+                    <button id="previous">Previous</button>
+                    <button id="next">Next</button>
+                </div>
         		<div id="toShow">
         			<img class='sp' src="/img/machines/F-385-1.jpg"/>
                     <img class='sp' src="/img/machines/F-385-2.jpg"/>
-                    <img class='sp' src="/img/machines/F-385-3.jpg"/>
         		</div>
 		</div>
     </div>
