--- a/views/machine/120-SE.html
+++ b/views/machine/120-SE.html
@@ -34,11 +34,15 @@
         </div>
         <div id ='right'>
         	<div id="slider">
-        		<div id="toShow">
-        			<img class='sp' src="/img/machines/120-SE-1.jpg"/>
-                    <img class='sp' src="/img/machines/120-SE-2.jpg"/>
-                    <img class='sp' src="/img/machines/120-SE-3.jpg"/>
-        		</div>
+                <div id="nav">
+                <button id="previous">Previous</button>
+                <button id="next">Next</button>
+            </div>
+    		<div id="toShow">
+    			<img class='sp' src="/img/machines/120-SE-1.jpg"/>
+                <img class='sp' src="/img/machines/120-SE-2.jpg"/>
+                <img class='sp' src="/img/machines/120-SE-3.jpg"/>
+    		</div>
 		</div>
     </div>
 
