--- a/views/machine/150-AETJ.html
+++ b/views/machine/150-AETJ.html
@@ -34,6 +34,10 @@
         </div>
         <div id ='right'>
         	<div id="slider">
+                <div id="nav">
+                    <button id="previous">Previous</button>
+                    <button id="next">Next</button>
+                </div>
         		<div id="toShow">
         			<img class='sp' src="/img/machines/150-AETJ-1.png"/>
                     <img class='sp' src="/img/machines/150-AETJ-2.jpg"/>
