--- a/views/machine/F-215.html
+++ b/views/machine/F-215.html
@@ -36,6 +36,10 @@
         </div>
         <div id ='right'>
         	<div id="slider">
+                <div id="nav">
+                    <button id="previous">Previous</button>
+                    <button id="next">Next</button>
+                </div>
         		<div id="toShow">
         			<img class='sp' src="/img/machines/F-215-1.jpg"/>
                     <img class='sp' src="/img/machines/F-215-2.jpg"/>
