[MODIFIED] Corrected missing images and added next and previous buttons on the missing machines. [MODIFIED] maquinas.css file for better machine info showing [MODIFIED] Text in aluguer and pecas views and corrected link to machines on galtrailer view

--- a/public/css/maquinas.css
+++ b/public/css/maquinas.css
@@ -26,7 +26,7 @@ div#left, div#right{
 }
 
 div#left{
-	margin-left: 40%;
+	margin-left: 35%;
 }
 
 div#left h1{
@@ -64,6 +64,9 @@ img.sp{
 table#info{
 	font-size: small;
 	margin-top: 62px;
+	margin-left: auto;
+	margin-right: auto;
+	min-width: 187px;
 }
 
 table#info > thead {
