--- a/views/aluguer.html
+++ b/views/aluguer.html
@@ -10,7 +10,7 @@
  
 				<p>Apresentamos soluções, fornecemos o equipamento com assistência especializada garantida, … sempre a funcionar.</p>
 				<ul>
-					<caption>Pode escolher</caption>
+					<caption>Pode escolher:</caption>
 					<li>Empilhador Convencional Diesel</li>
 					<li>Empilhador Convencional Elétrico</li>
 					<li>Porta Paletes Elétricos</li>
