--- a/views/brand/galtrailer.html
+++ b/views/brand/galtrailer.html
@@ -17,11 +17,11 @@
 	<p/>
 
 	<ul id='slideMaq'>
-		<li class ='ltp' link='/maquina/gal-b2'>
+		<li class ='ltp' link='/maquina/Gal-B2'>
 			<img class='machine' src='/img/machines/Gal-B2-small.png'/>
 			<span>Basculante 2 eixos</span>
 		</li>
-		<li class ='ltp' link='/maquina/gal-pm3'>
+		<li class ='ltp' link='/maquina/Gal-PM3'>
 			<img class='machine' src='/img/machines/Gal-PM3-small.png'/>
 			<span>Porta Máquinas 3 eixos</span>
 		</li>
