--- a/views/pecas.html
+++ b/views/pecas.html
@@ -11,7 +11,7 @@
 				<br/><br/>
 				O nosso balcão de peças, instalado ao lado da oficina, dispõe de atendimento personalizado efetuado por pessoal técnico qualificado.
 				<br/><br/>
-				Para sua comodidade, dispomos de pagamento eletrónico por Terminal TPA
+				Para a sua comodidade, dispomos de pagamento eletrónico por Terminal TPA
 				<br/><br/>
 				Se pretender pode ligar para o contacto direto – 922 080 593
 				<br/><br/>
