--- a/views/machine/DCE-150.html
+++ b/views/machine/DCE-150.html
@@ -34,6 +34,10 @@
         </div>
         <div id ='right'>
         	<div id="slider">
+                <div id="nav">
+                    <button id="previous">Previous</button>
+                    <button id="next">Next</button>
+                </div>
         		<div id="toShow">
         			<img class='sp' src="/img/machines/DCE-150-1.jpg"/>
                     <img class='sp' src="/img/machines/DCE-150-2.jpg"/>
