[MODIFIED] changed disponivies for disponíveis and corrected loadder for loader

--- a/views/brand/ammann.html
+++ b/views/brand/ammann.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/ammann.png' link='http://www.ammann-group.com/en/home/compaction/'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
