--- a/views/brand/sumitomo.html
+++ b/views/brand/sumitomo.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/sumitomo.png' link='http://www.sumitomokenki.com/'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
