--- a/views/brand/bell.html
+++ b/views/brand/bell.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/bell.png' link='http://www.bellequipment.com'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
