--- a/views/brand/galtrailer.html
+++ b/views/brand/galtrailer.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/galtrailer.png' link='http://www.pt.manitou.com/manitou/pt/market/3-industry'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
