--- a/views/brand/kalmar.html
+++ b/views/brand/kalmar.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/kalmar.png' link='http://www.kalmarglobal.com/'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
