--- a/views/brand/mustang.html
+++ b/views/brand/mustang.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/mustang.png' link='http://www.mustangmfg.com/Home.aspx'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
