--- a/views/brand/sillaitaly.html
+++ b/views/brand/sillaitaly.html
@@ -12,7 +12,7 @@
 
 	<div>
 		<img class ='ltb' src='/img/partners/sillaitaly.png' link='http://www.sillaitaly.com/'></img>
-		<span> - Outros modelos disponiveis</span>
+		<span> - Outros modelos disponíveis</span>
 	<div>
 	<p/>
 
