--- a/views/machine/Must-2056.html
+++ b/views/machine/Must-2056.html
@@ -11,7 +11,7 @@
 <body>
 	<div id='intro'>
         <div id='left'>
-        	<h1><span class='ltb' link='http://www.mustangmfg.com/products/SkidSteer/2056SeriesII.aspx#../../Libraries/2056_Series_II_Photo_Gallery/2056_Series_II_Fill_Mixer.sflb.ashx'>Skid Steer Loadder 2056</span></h1>
+        	<h1><span class='ltb' link='http://www.mustangmfg.com/products/SkidSteer/2056SeriesII.aspx#../../Libraries/2056_Series_II_Photo_Gallery/2056_Series_II_Fill_Mixer.sflb.ashx'>Skid Steer Loader 2056</span></h1>
         	<h2>Minicarregador</h2>
         	<p/>
         	<table id='info'>
