--- a/public/css/lib/flexisel.css
+++ b/public/css/lib/flexisel.css
@@ -51,8 +51,7 @@ display:none;
     position: relative;
     margin-top: 10px;
     margin-bottom: 10px;
-    max-width:100px;
-    max-height:100px;
+    height:100px;
 }
 
 /*** Navigation ***/
